<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_chat_members"
        android:icon="@drawable/ic_group"
        android:title="@string/chat_members"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_chat_appearance"
        android:icon="@drawable/ic_palette"
        android:title="@string/chat_appearance"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_chat_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/chat_more"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_chat_rules"
                android:title="@string/chat_rules" />
            <item
                android:id="@+id/menu_chat_moments"
                android:title="@string/moments_title" />
            <item
                android:id="@+id/menu_chat_send_image"
                android:title="@string/chat_send_character_image" />
            <item
                android:id="@+id/menu_chat_clear"
                android:title="@string/chat_clear_history" />
        </menu>
    </item>
</menu>
